# scikit-rca

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  replace.sh
.github/workflows/: lint.yml  python-app.yml
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  quick_start.rst
examples/: plot_classifier.py  plot_template.py  plot_transformer.py  run_rca.py
examples/data/: README.md  features.npy  labels.npy
rca_fmri/: __init__.py  _template.py  rca.py
rca_fmri/tests/: test_common.py  test_rca.py  test_template.py
rca_fmri/utils/: data.py  discovery.py  metrics.py
rca_fmri/utils/tests/: test_discovery.py
scikit_rca/: __init__.py  _version.py  rca.py
scikit_rca/tests/: test_common.py  test_rca.py
scikit_rca/utils/: discovery.py  metrics.py
scikit_rca/utils/tests/: test_discovery.py
