[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rca_fmri"
dynamic = ["version"]
authors = [
  { name="Vighnesh Birodkar", email="vighneshbirodkar@nyu.edu" },
  { name="Guillaume Lemaitre", email="g.lemaitre58@gmail.com" },
]
description = "A template for scikit-learn compatible packages."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "scikit-learn>=1.4.2",
  "torch>=2.5",
  "tqdm==4.66.1",
  "spatiotemporal==1.0.1",
  "pingouin==0.5.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/scikit-learn-contrib/rca_fmri"
Issues = "https://github.com/scikit-learn-contrib/rca_fmri/issues"

[tool.setuptools_scm]
version_file = "rca_fmri/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
# platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "3.11.*"
# scikit-learn = ">=1.4.2"
pip = "*"

[tool.pixi.feature.lint.tasks]
black = { cmd = "black --check --diff rca_fmri && black --check --diff examples" }
ruff = { cmd = "ruff check --output-format=full rca_fmri && ruff check --output-format=full examples" }
lint = { depends-on = ["black", "ruff"]}

[tool.pixi.pypi-dependencies]
rca_fmri = { path=".", editable=true }

# Scientific stack (PyPI wheels)
numpy = ">=2.0"
scipy = "*"
scikit-learn = ">=1.4.2"
torch = ">=2.5"
tqdm = "==4.66.1"
spatiotemporal = "==1.0.1"
pingouin = "==0.5.3"

# Test
pytest = "*"
pytest-cov = "*"

# Lint (pin explicitly to silence warnings)
black = "==23.3.0"
pre-commit = "==3.7.1"
ruff = "==0.4.2"

# Docs
matplotlib = "*"
numpydoc = "*"
pydata-sphinx-theme = "*"
setuptools-scm = ">=8"
sphinx = "*"
sphinx-design = "*"
sphinx-gallery = "*"
sphinx-prompt = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest -vsl --cov=rca_fmri --cov-report=xml rca_fmri" }

[tool.pixi.feature.doc.tasks]
build-doc = { cmd = "make html", cwd = "doc" }
clean-doc = { cmd = "rm -rf _build", cwd = "doc" }

[tool.pixi.environments]
doc = ["doc"]
lint = ["lint"]
test = ["test"]
dev = ["doc", "lint", "test"]

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''
force-exclude = "rca_fmri/_version.py"

[tool.ruff]
# max line length for black
line-length = 88
target-version = "py38"
exclude=[
    ".git",
    "__pycache__",
    "dist",
    "doc/_build",
    "doc/auto_examples",
    "build",
    "rca_fmri/_version.py",
]

[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
]

[tool.ruff.lint.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"examples/*"=["E402"]
"doc/conf.py"=["E402"]
"doc/_templates/numpydoc_docstring.py"=["F821", "W292"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --color=yes"
doctest_optionflags = "NORMALIZE_WHITESPACE"
