[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-rca"
dynamic = ["version"]
authors = [
  { name="Max Weissenbacher", email="max.weissenbacher@pm.me" },
]
description = "Reliability Component Analysis"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
dependencies = [
  "scikit-learn>=1.4.2",
  "torch>=2.5; platform_system != \"Darwin\" or platform_machine == \"arm64\"",
  "click>=8.1",
  "tqdm==4.66.1",
  "spatiotemporal==1.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/maxweissenbacher/scikit-rca"
Issues = "https://github.com/maxweissenbacher/scikit-rca/issues"

[tool.setuptools_scm]
version_file = "scikit_rca/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools]
license-files = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
# platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "3.11.*"
# scikit-learn = ">=1.4.2"
pip = "*"

[tool.pixi.target.osx-64.dependencies]
pytorch = ">=2.5"

[tool.pixi.feature.lint.tasks]
black = { cmd = "black --check --diff scikit_rca && black --check --diff examples" }
ruff = { cmd = "ruff check --output-format=full scikit_rca && ruff check --output-format=full examples" }
lint = { depends-on = ["black", "ruff"]}

[tool.pixi.pypi-dependencies]
scikit_rca = { path=".", editable=true }

# Scientific stack (PyPI wheels)
numpy = ">=2.0"
scipy = "*"
scikit-learn = ">=1.4.2"
click = ">=8.1"
tqdm = "==4.66.1"
spatiotemporal = "==1.0.1"

# Test
pytest = "*"

# Lint (pin explicitly to silence warnings)
black = "==23.3.0"
pre-commit = "==3.7.1"
ruff = "==0.4.2"

# Docs
matplotlib = "*"
numpydoc = "*"
pydata-sphinx-theme = "*"
setuptools-scm = ">=8"
sphinx = "*"
sphinx-design = "*"
sphinx-gallery = "*"
sphinx-prompt = "*"

# Release
build = "*"
twine = ">=5.1.1"
pkginfo = ">=1.10.0"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest -vsl scikit_rca" }

[tool.pixi.feature.doc.tasks]
build-doc = { cmd = "make html", cwd = "doc" }
clean-doc = { cmd = "rm -rf _build", cwd = "doc" }

[tool.pixi.environments]
doc = ["doc"]
lint = ["lint"]
test = ["test"]
dev = ["doc", "lint", "test"]

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''
force-exclude = "scikit_rca/_version.py"

[tool.ruff]
# max line length for black
line-length = 120
target-version = "py38"
exclude=[
    ".git",
    "__pycache__",
    "dist",
    "doc/_build",
    "doc/auto_examples",
    "build",
    "scikit_rca/_version.py",
]

[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
]

[tool.ruff.lint.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"examples/*"=["E402"]
"doc/conf.py"=["E402"]
"doc/_templates/numpydoc_docstring.py"=["F821", "W292"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --color=yes"
doctest_optionflags = "NORMALIZE_WHITESPACE"
